	* core: Support SO_REUSEPORT (as introduced in Linux Kernel 3.9.0, and
			supported by other UNIX OSes already)
	* x0d: Added bash completion.
	* x0d: Support -e epoll,select,poll,.... to choose event-system backend x0d should run on.
	* plugins: removed plugins proxy & fastcgi. Deprecated by director plugin.
	* plugins: accesslog plugin now also supports syslog target
	* plugins: director plugin has experimental support for backend acceleration
	* plugins: director plugin has initial support for HAproxy compatible CSV output
	* plugins: director plugin fixed wrt. off-by-one bug in scheduler.load stats.
	* plugins: director plugin now supports X-Sendfile for HTTP & FastCGI backends.
	* plugins: director plugin can now enable/disable complete clusters, resulting in 503 responses if disabled.

0.6.0 (2013-02-27)

	GOAL: running director plugin in productively in multi threaded mode.

	* http: multi threaded mode fixes
	* http: stability fixes
	* http: shutdown process resource cleanup fixes
	* http: improved diagnostic logging
	* http: C++ API improvements
	* http: fixed a bug wrt HTTP message processing in an edge case ignoring the message body
	* http: added support for preventing directory traversal outside document-root.
	* http: fixed document roots that contained trailing slashes
	* director: bug fixes
	* director: JSON API also shows number of dropped requests per load balancer
	* director: should now run properly in threaded mode.
	* director: added director.fcgi() and director.http() handlers to
	deprecate fastcgi and proxy plugins
	* core-api: added Severity level "notice" (syslog-alike).
	* core-api: Buffer now inherits from BufferRef.
	* core-api: Socket API improvements
	* status: added support for nginx-compatible status output, handler status.nginx_compat();
	* config: rewrite() now returns boolean to indicate whether or not rewritten path physically exists or not.